[package]
name = "cases"
version = "0.2.5"
edition = "2024"
rust-version = "1.85.0"

[dependencies]
askama = { version = "0.14" }
axum = { version = "0.8.8", features = [
    "http2",
    "query",
    "tokio",
    "http1",
    "json",
], default-features = false }
basic-toml = "*"
bincode = "2.0.1"
csv = "1"
fast2s = "0.3.1"
fjall = { version = "2.11.2", default-features = false, features = [
    "single_writer_tx",
    "miniz",
] }
indexmap = "2"
jiff = { version = "0.2.16", default-features = false, features = ["std"] }
scraper = "0.25.0"
serde = { version = "1", features = ["derive"] }
stop-words = "0.9.0"
tantivy = "0.25.0"
tantivy-jieba = "0.17.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["compression-zstd", "timeout"] }
tracing = { version = "0.1", features = [
    "release_max_level_info",
    "max_level_info",
] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zip = { version = "7", default-features = false, features = ["deflate"] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
tikv-jemallocator = "0.6"

[dev-dependencies]
arrow = { version = "57.1.0", default-features = false }
clickhouse = { version = "0.14.1" }
jieba-rs = "0.8.0"
parquet = { version = "57.1.0", default-features = false, features = [
    "arrow",
    "lz4",
] }

[profile.release]
lto = "fat"
strip = true
codegen-units = 1
panic = "abort"
rpath = false
